--- a/app/src/main/res/layout/activity_teaching_subject_search.xml
+++ b/app/src/main/res/layout/activity_teaching_subject_search.xml
@@ -1,64 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/px90"
-            android:background="@color/white"
-            android:orientation="horizontal">
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/px90"
+        android:background="@color/white"
+        android:transitionName="search_bar"
+        android:orientation="horizontal">
 
         <ImageView
-                android:id="@+id/back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/back_arrow"
-                android:layout_marginLeft="@dimen/px30"
-                android:visibility="gone"
-                android:layout_gravity="center_vertical"/>
+            android:id="@+id/back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/px30"
+            android:src="@drawable/back_arrow"
+            android:visibility="gone" />
 
         <cn.xiaojs.xma.ui.widget.EditTextDel
-                android:id="@+id/search_input"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:drawableLeft="@drawable/ic_search"
-                android:paddingLeft="@dimen/px10"
-                android:paddingRight="@dimen/px10"
-                android:hint="@string/home_search_hint"
-                android:layout_gravity="center_vertical"
-                android:textSize="@dimen/font_28px"
-                android:gravity="center_vertical"
-                android:maxLines="1"
-                android:background="@drawable/grey_conner_bg"
-                android:paddingBottom="@dimen/px15"
-                android:paddingTop="@dimen/px15"
-                android:layout_marginLeft="@dimen/px30"
-                android:layout_height="wrap_content"
-                android:singleLine="true"/>
+            android:id="@+id/search_input"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/px30"
+            android:layout_weight="1"
+            android:background="@drawable/grey_conner_bg"
+            android:drawableLeft="@drawable/ic_search"
+            android:gravity="center_vertical"
+            android:hint="@string/home_search_hint"
+            android:maxLines="1"
+            android:paddingBottom="@dimen/px15"
+            android:paddingLeft="@dimen/px10"
+            android:paddingRight="@dimen/px10"
+            android:paddingTop="@dimen/px15"
+            android:singleLine="true"
+            android:textSize="@dimen/font_28px"
+             />
 
         <TextView
-                android:id="@+id/search_ok"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/px30"
-                android:layout_marginRight="@dimen/px30"
-                android:layout_gravity="center_vertical"
-                android:textColor="@drawable/orange_click_text_selector"
-                android:text="@string/cancel"/>
+            android:id="@+id/search_ok"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/px30"
+            android:layout_marginRight="@dimen/px30"
+            android:text="@string/cancel"
+            android:textColor="@drawable/orange_click_text_selector" />
 
     </LinearLayout>
 
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
-    <View style="@style/DividerHorizontal"/>
+    <View style="@style/DividerHorizontal" />
 
 
 </LinearLayout>
