--- a/app/src/main/res/layout/activity_teaching_subject_search.xml
+++ b/app/src/main/res/layout/activity_teaching_subject_search.xml
@@ -53,11 +53,19 @@
 
     </LinearLayout>
 
-    <ListView
+    <!--<ListView-->
+        <!--android:id="@+id/listview"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_weight="1" />-->
+
+    <cn.xiaojs.xma.common.pulltorefresh.core.PullToRefreshSwipeListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:scrollbars="none"
+        />
 
     <View style="@style/DividerHorizontal" />
 
