--- a/app/src/main/res/layout/activity_select_subject.xml
+++ b/app/src/main/res/layout/activity_select_subject.xml
@@ -24,6 +24,7 @@
             android:background="@color/main_orange">
 
         <TextView
+            android:id="@+id/btn_add"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/add_subject"
