--- a/app/src/main/res/layout/fragment_classroom_play.xml
+++ b/app/src/main/res/layout/fragment_classroom_play.xml
@@ -11,8 +11,8 @@
             android:background="@color/black">
         <cn.xiaojs.xma.ui.classroom.live.view.PlayerTextureView
                 android:id="@+id/play_video"
-                android:layout_width="@dimen/px480"
-                android:layout_height="@dimen/px848"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_centerInParent="true"
                 android:visibility="visible"/>
 
