--- a/app/src/main/res/layout/layout_media_base_view.xml
+++ b/app/src/main/res/layout/layout_media_base_view.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:loading="http://schemas.android.com/apk/res-auto"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:loading="http://schemas.android.com/apk/res-auto"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
-    <FrameLayout
+    <!--<FrameLayout
             android:id="@+id/media_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"/>-->
 
     <FrameLayout
             android:id="@+id/loading_layout"
@@ -39,4 +39,4 @@
         </LinearLayout>
 
     </FrameLayout>
-</FrameLayout>
+</merge>
