--- a/app/src/main/res/layout/layout_texture_player_view.xml
+++ b/app/src/main/res/layout/layout_texture_player_view.xml
@@ -2,6 +2,6 @@
 <com.pili.pldroid.player.widget.PLVideoTextureView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/texture_player"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"/>
