--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -131,5 +131,6 @@
     <string-array name="add_menu">
         <item>扫一扫</item>
         <item>开课</item>
+        <item>开班</item>
     </string-array>
 </resources>
