--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -46,7 +46,18 @@
     <dimen name="drop_down_list_header_progress_bar_height">36dp</dimen>
     <dimen name="default_border_width">0dp</dimen>
 
-
+    <!--负的-->
+    <dimen name="px_10">-5.0dp</dimen>
+    <dimen name="px_9">-4.5dp</dimen>
+    <dimen name="px_8">-4.0dp</dimen>
+    <dimen name="px_7">-3.5dp</dimen>
+    <dimen name="px_6">-3.0dp</dimen>
+    <dimen name="px_5">-2.5dp</dimen>
+    <dimen name="px_4">-2.0dp</dimen>
+    <dimen name="px_3">-1.5dp</dimen>
+    <dimen name="px_2">-1.0dp</dimen>
+    <dimen name="px_1">-0.5dp</dimen>
+    <!--正的-->
     <dimen name="px1">0.5dp</dimen>
     <dimen name="px2">1.0dp</dimen>
     <dimen name="px3">1.5dp</dimen>
