教室横竖屏ver1.5 一对一视频&消息列表更新

--- a/app/src/main/res/drawable/cr_video.xml
+++ b/app/src/main/res/drawable/cr_video.xml
@@ -3,6 +3,6 @@
     <item android:state_selected="true" android:drawable="@drawable/ic_video_pressed"/>
     <item android:state_pressed="true" android:drawable="@drawable/ic_video_pressed"/>
     <item android:state_focused="true" android:drawable="@drawable/ic_video_pressed"/>
-    <item android:drawable="@drawable/ic_video"/>
+    <item android:drawable="@drawable/ic_cr_video"/>
 
 </selector>
