教室横竖屏ver1.8 个人推流优化

--- a/app/src/main/res/layout/fragment_classroom_contact.xml
+++ b/app/src/main/res/layout/fragment_classroom_contact.xml
@@ -30,6 +30,7 @@
                 android:text="@string/cr_manage_contact"
                 android:paddingTop="@dimen/px20"
                 android:paddingBottom="@dimen/px20"
+                android:visibility="gone"
                 android:textColor="@color/font_blue"/>
 
         <View
