--- a/app/src/main/res/layout/activity_add_lesson_name.xml
+++ b/app/src/main/res/layout/activity_add_lesson_name.xml
@@ -29,4 +29,10 @@
 
     </FrameLayout>
 
+    <ListView
+            android:id="@+id/complete_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"/>
+
 </LinearLayout>
