--- a/app/src/main/res/layout/layout_verification_class_msg_item.xml
+++ b/app/src/main/res/layout/layout_verification_class_msg_item.xml
@@ -34,36 +34,59 @@
             android:textSize="@dimen/font_28px"
             android:textColor="@color/font_dark_gray"
             android:text="@string/request_join_class"
-            android:layout_below="@id/time"
-            android:layout_toRightOf="@id/name_num"
+            android:layout_below="@id/name_num"
+            android:layout_alignLeft="@id/name_num"
+            android:layout_marginTop="@dimen/px15"
+            />
+
+    <Button
+            android:id="@+id/refuse_btn"
+            android:layout_width="@dimen/px100"
+            android:layout_height="@dimen/px50"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:text="@string/refuse"
+            android:textColor="@color/subject_selected_blue"
+            android:textSize="@dimen/font_26px"
             android:layout_marginLeft="@dimen/px20"
-            android:layout_alignBaseline="@id/name_num"
+            android:background="@drawable/bg_refuse_rect"
             />
 
     <Button
             android:id="@+id/agree_btn"
-            android:layout_width="@dimen/px140"
-            android:layout_height="@dimen/px58"
+            android:layout_width="@dimen/px100"
+            android:layout_height="@dimen/px50"
+            android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@id/refuse_btn"
             android:text="@string/agree"
             android:textColor="@color/font_white"
             android:textSize="@dimen/font_26px"
             android:layout_below="@id/name_num"
-            android:layout_marginTop="@dimen/px27"
             android:background="@drawable/bg_agree_rect"/>
 
-    <Button
-            android:id="@+id/refuse_btn"
-            android:layout_width="@dimen/px140"
-            android:layout_height="@dimen/px58"
-            android:text="@string/refuse"
+    <TextView
+            android:id="@+id/status_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:textColor="@color/subject_selected_blue"
-            android:textSize="@dimen/font_26px"
-            android:layout_below="@id/name_num"
-            android:layout_toRightOf="@id/agree_btn"
-            android:layout_marginLeft="@dimen/px41"
-            android:layout_alignBaseline="@id/agree_btn"
-            android:background="@drawable/bg_refuse_rect"
-            />
+            android:textSize="@dimen/font_24px"
+            android:text="已同意"/>
+
+    <TextView
+            android:id="@+id/opera_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/status_view"
+            android:textColor="@color/font_gray"
+            android:textSize="@dimen/font_24px"
+            android:layout_marginTop="@dimen/px13"
+            android:text="处理人"/>
+
+
+
+
 
 
 </RelativeLayout>
