--- a/app/src/main/res/layout/layout_complete_single_text_item.xml
+++ b/app/src/main/res/layout/layout_complete_single_text_item.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
-</TextView>
+          android:layout_width="match_parent"
+          android:layout_height="@dimen/px100"
+          android:textSize="@dimen/font_30px"
+          android:textColor="@color/font_black"
+          android:paddingLeft="@dimen/px30"
+          android:paddingRight="@dimen/px30"
+          android:paddingTop="@dimen/px33"
+          android:paddingBottom="@dimen/px37"
+        />
