--- a/app/src/main/res/layout/activity_share_qrcode.xml
+++ b/app/src/main/res/layout/activity_share_qrcode.xml
@@ -12,7 +12,7 @@
             android:gravity="center"
             android:layout_marginLeft="@dimen/px45"
             android:layout_marginRight="@dimen/px45"
-            android:layout_marginTop="@dimen/px102"
+            android:layout_marginTop="@dimen/px100"
             android:paddingBottom="@dimen/px70"
             android:paddingTop="@dimen/px50"
             android:background="@drawable/bg_white_rect">
@@ -23,13 +23,14 @@
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/font_34px"
                 android:textColor="@color/font_black"
-                android:singleLine="true"/>
+                android:singleLine="true"
+                android:layout_marginBottom="@dimen/px59"
+                android:visibility="gone"/>
 
         <ImageView
                 android:id="@+id/qrcode_img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/px59"
                 android:layout_marginBottom="@dimen/px51"
                 />
 
