--- a/app/src/main/res/layout/activity_classes_list.xml
+++ b/app/src/main/res/layout/activity_classes_list.xml
@@ -4,23 +4,11 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/px90"
                     android:background="@color/white"
                     android:orientation="horizontal">
-
-        <TextView
-                android:id="@+id/left_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/px26"
-                android:paddingRight="@dimen/px26"
-                android:paddingTop="@dimen/px16"
-                android:paddingBottom="@dimen/px16"
-                android:textStyle="bold"
-                android:textSize="@dimen/font_30px"
-                android:textColor="@color/font_black"/>
 
         <ImageView
                 android:id="@+id/left_image"
@@ -33,34 +21,47 @@
                 android:layout_centerInParent="true"
                 android:src="@drawable/back_arrow"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-        <TextView
-                android:id="@+id/middle_view"
+                android:layout_height="match_parent"/>
+        
+        <RadioGroup
+                android:id="@+id/lay_tab_group"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/font_32px"
-                android:textStyle="bold"
+                android:layout_height="match_parent"
                 android:layout_centerInParent="true"
-                android:textColor="@color/font_black"/>
-
-        <TextView
-                android:id="@+id/right_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical"
-                android:paddingLeft="@dimen/px32"
-                android:paddingRight="@dimen/px32"
-                android:paddingTop="@dimen/px16"
-                android:textStyle="bold"
-                android:layout_alignParentRight="true"
-                android:layout_centerInParent="true"
-                android:paddingBottom="@dimen/px16"
-                android:textSize="@dimen/font_30px"
-                android:textColor="@color/font_black"/>
+                android:orientation="horizontal"
+                android:gravity="center"
+                >
+            <RadioButton
+                    android:id="@+id/tab_class"
+                    android:layout_width="@dimen/px180"
+                    android:layout_height="wrap_content"
+                    android:text="@string/gradle"
+                    android:button="@null"
+                    android:gravity="center"
+                    android:textSize="@dimen/font_26px"
+                    android:textColor="@drawable/class_lesson_check_text_selector"
+                    android:paddingBottom="@dimen/px11"
+                    android:paddingTop="@dimen/px11"
+                    android:background="@drawable/bg_class_lesson_left_selector"
+                    />
+            <RadioButton
+                    android:id="@+id/tab_lesson"
+                    android:layout_width="@dimen/px180"
+                    android:layout_height="wrap_content"
+                    android:text="@string/teach_form_lecture"
+                    android:textColor="@drawable/class_lesson_check_text_selector"
+                    android:gravity="center"
+                    android:button="@null"
+                    android:textSize="@dimen/font_26px"
+                    android:paddingBottom="@dimen/px11"
+                    android:paddingTop="@dimen/px11"
+                    android:background="@drawable/bg_class_lesson_right_selector"/>
+            
+        </RadioGroup>
+        
 
         <ImageView
-                android:id="@+id/right_image"
+                android:id="@+id/add_btn"
                 android:paddingLeft="@dimen/px26"
                 android:paddingRight="@dimen/px26"
                 android:paddingTop="@dimen/px16"
@@ -69,20 +70,18 @@
                 android:layout_centerInParent="true"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:src="@drawable/ic_add"
                 />
-
-        <ImageView
-                android:id="@+id/right_image2"
-                android:layout_toLeftOf="@id/right_image"
-                android:layout_centerInParent="true"
-                android:paddingLeft="@dimen/px26"
-                android:paddingRight="@dimen/px26"
-                android:paddingTop="@dimen/px16"
-                android:paddingBottom="@dimen/px16"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
 
 
     </RelativeLayout>
+
+    <android.support.v4.view.ViewPager
+            android:id="@+id/tab_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#ffffff"
+            android:orientation="vertical" >
+    </android.support.v4.view.ViewPager>
 
 </LinearLayout>
