--- a/app/src/main/res/layout/fragment_home_class_normal.xml
+++ b/app/src/main/res/layout/fragment_home_class_normal.xml
@@ -58,7 +58,7 @@
     <View style="@style/DividerHorizontal"/>
 
 
-    <include layout="@layout/layout_schedule"/>
+    <include layout="@layout/layout_home_schedule"/>
 
 
 </LinearLayout>
