--- a/app/src/main/res/layout/layout_person_home_header.xml
+++ b/app/src/main/res/layout/layout_person_home_header.xml
@@ -34,6 +34,12 @@
                 android:layout_width="wrap_content"
                 android:maxLines="5"
                 android:layout_height="wrap_content"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/px30"
+            android:background="@color/main_bg"
+            />
     </LinearLayout>
 
     <LinearLayout
