--- a/app/src/main/res/layout/layout_classroom_panel_top.xml
+++ b/app/src/main/res/layout/layout_classroom_panel_top.xml
@@ -5,180 +5,84 @@
         android:layout_alignParentTop="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:paddingTop="@dimen/px5"
+        android:paddingBottom="@dimen/px5"
+        android:clickable="true"
+        android:background="@color/classroom_main_gray">
 
-    <RelativeLayout
-            android:id="@+id/title_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/px5"
-            android:paddingBottom="@dimen/px5"
-            android:background="@color/classroom_main_gray">
-
-        <ImageView
-                android:id="@+id/back_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_alignParentLeft="true"
-                android:paddingLeft="@dimen/px50"
-                android:paddingRight="@dimen/px30"
-                android:paddingTop="@dimen/px20"
-                android:paddingBottom="@dimen/px20"
-                android:src="@drawable/ic_back_pressed"/>
-
-        <ImageView
-                android:id="@+id/play_pause_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:paddingLeft="@dimen/px30"
-                android:paddingRight="@dimen/px30"
-                android:paddingTop="@dimen/px20"
-                android:paddingBottom="@dimen/px20"
-                android:visibility="gone"
-                android:layout_toRightOf="@+id/back_btn"
-                android:src="@drawable/ic_cr_start"/>
-
-        <ImageView
-                android:id="@+id/finish_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:paddingLeft="@dimen/px30"
-                android:paddingRight="@dimen/px30"
-                android:paddingTop="@dimen/px20"
-                android:paddingBottom="@dimen/px20"
-                android:visibility="gone"
-                android:layout_toRightOf="@+id/play_pause_btn"
-                android:src="@drawable/ic_cr_exit"/>
-
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_toRightOf="@+id/finish_btn"
-                android:layout_toLeftOf="@+id/fc_open_contact_btn"
-                android:gravity="center"
-                android:orientation="vertical">
-
-            <TextView
-                    android:id="@+id/lesson_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:layout_gravity="center"
-                    android:textSize="@dimen/font_30px"/>
-
-            <TextView
-                    android:id="@+id/reset_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:layout_marginTop="@dimen/px4"
-                    android:textSize="@dimen/font_20px"
-                    android:visibility="gone"/>
-        </LinearLayout>
-
-        <ImageView
-                android:id="@+id/fc_open_contact_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:paddingLeft="@dimen/px30"
-                android:paddingRight="@dimen/px30"
-                android:paddingTop="@dimen/px20"
-                android:paddingBottom="@dimen/px20"
-                android:layout_toLeftOf="@+id/notify_msg_btn"
-                android:src="@drawable/ic_cr_contact_book"/>
-
-        <cn.xiaojs.xma.ui.widget.MessageImageView
-                android:id="@+id/notify_msg_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:paddingLeft="@dimen/px30"
-                android:paddingRight="@dimen/px30"
-                android:paddingTop="@dimen/px20"
-                android:paddingBottom="@dimen/px20"
-                android:layout_toLeftOf="@+id/setting_btn"
-                android:src="@drawable/ic_cr_notice"
-                android:visibility="gone"/>
-
-
-        <ImageView
-                android:id="@+id/setting_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:paddingLeft="@dimen/px30"
-                android:paddingRight="@dimen/px30"
-                android:paddingTop="@dimen/px20"
-                android:paddingBottom="@dimen/px20"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/ic_cr_setting"/>
-
-    </RelativeLayout>
-
-    <LinearLayout
-            android:id="@+id/live_progress_layout"
+    <ImageView
+            android:id="@+id/back_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="@dimen/px18"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_vertical"
-            android:layout_below="@+id/title_bar"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/cr_corner_gray_bg">
+            android:layout_alignParentLeft="true"
+            android:paddingLeft="@dimen/px30"
+            android:paddingRight="@dimen/px30"
+            android:paddingTop="@dimen/px20"
+            android:paddingBottom="@dimen/px20"
+            android:src="@drawable/ic_back_pressed"/>
+
+    <ImageView
+            android:id="@+id/play_pause_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/px30"
+            android:paddingRight="@dimen/px30"
+            android:paddingTop="@dimen/px20"
+            android:paddingBottom="@dimen/px20"
+            android:layout_toRightOf="@+id/back_btn"
+            android:src="@drawable/ic_cr_start"/>
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_toLeftOf="@+id/finish_btn"
+            android:layout_toRightOf="@+id/play_pause_btn"
+            android:gravity="center"
+            android:orientation="vertical">
 
         <TextView
-                android:id="@+id/count_time"
-                android:textColor="@color/font_white"
-                android:textSize="@dimen/font_20px"
-                android:layout_width="wrap_content"
-                android:paddingTop="@dimen/px20"
-                android:paddingBottom="@dimen/px20"
-                android:paddingLeft="@dimen/px15"
-                android:text="00:00:00"
-                android:layout_height="wrap_content"/>
-
-        <SeekBar
-                android:id="@+id/live_progress"
+                android:id="@+id/lesson_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/px12"
-                android:layout_marginRight="@dimen/px12"
-                android:maxHeight="@dimen/px2"
-                android:minHeight="@dimen/px2"
-                android:thumbOffset="@dimen/px7"
-                android:foregroundGravity="center_vertical"
-                android:thumb="@null"
-                android:clickable="false"
-                android:progressDrawable="@drawable/live_progress_bar"/>
+                android:textColor="@color/white"
+                android:layout_gravity="center"
+                android:textSize="@dimen/font_26px"
+                android:maxLines="1"
+                android:ellipsize="end"/>
 
-
-        <LinearLayout
+        <TextView
+                android:id="@+id/lesson_time_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-            <TextView
-                    android:id="@+id/total_time"
-                    android:textColor="@color/font_white"
-                    android:textSize="@dimen/font_20px"
-                    android:layout_width="wrap_content"
-                    android:paddingRight="@dimen/px15"
-                    android:layout_height="wrap_content"/>
-
-            <TextView
-                    android:id="@+id/delay_time"
-                    android:textColor="@color/font_red"
-                    android:textSize="@dimen/font_20px"
-                    android:layout_width="wrap_content"
-                    android:visibility="gone"
-                    android:paddingRight="@dimen/px15"
-                    android:layout_height="wrap_content"/>
-
-        </LinearLayout>
+                android:textColor="@color/white"
+                android:layout_marginTop="@dimen/px4"
+                android:textSize="@dimen/font_18px"
+                android:maxLines="1"
+                android:ellipsize="end"/>
     </LinearLayout>
+
+    <ImageView
+            android:id="@+id/finish_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/px30"
+            android:paddingRight="@dimen/px30"
+            android:paddingTop="@dimen/px20"
+            android:paddingBottom="@dimen/px20"
+            android:visibility="invisible"
+            android:layout_toLeftOf="@+id/setting_btn"
+            android:src="@drawable/ic_cr_exit"/>
+
+    <ImageView
+            android:id="@+id/setting_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/px30"
+            android:paddingRight="@dimen/px30"
+            android:paddingTop="@dimen/px20"
+            android:paddingBottom="@dimen/px20"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/ic_cr_setting"/>
+
 </RelativeLayout>
